020/klustered-h0nk/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: honk
  namespace: honk
spec:
  selector:
    app: honk
  ports:
  - port: 8080
    targetPort: 8080
