020/klustered-h0nk/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    ingress.kubernetes.io/browser-xss-filter: "true"
    ingress.kubernetes.io/content-type-nosniff: "true"
    ingress.kubernetes.io/custom-response-headers: Permissions-Policy:accelerometer=(),
      camera=(), geolocation=(), gyroscope=(), magnetometer=(),
      microphone=(), payment=(), usb=(), interest-cohort=()
    ingress.kubernetes.io/force-hsts: "true"
    ingress.kubernetes.io/hsts-include-subdomains: "true"
    ingress.kubernetes.io/hsts-max-age: "315360000"
    ingress.kubernetes.io/hsts-preload: "true"
    ingress.kubernetes.io/referrer-policy: strict-origin
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
  name: honk
  namespace: honk
spec:
  rules:
  - host: klustered.frezbo.dev
    http:
      paths:
      - backend:
          service:
            name: honk
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - klustered.frezbo.dev
    secretName: klustered-cert
